# tinyemu

./: CMakeLists.txt  README.md
cmake-modules/: Finddpdk.cmake  Findpcap.cmake
source-code/: CMakeLists.txt  main.cpp
source-code/dpdk/: CMakeLists.txt  dpdk.cpp  dpdk.hpp  dpdk_traits.hpp  lcore_id.hpp  port.hpp  queue.hpp  resource_list.hpp  resource_manager.cpp  resource_manager.hpp
source-code/helpers/: CMakeLists.txt  logging.cpp  logging.hpp  program_options.cpp  program_options.hpp
source-code/unittests/: CMakeLists.txt
source-code/unittests/dpdk/: CMakeLists.txt  ut_dpdk.cpp  ut_resource_list.cpp
